k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  labels:
    app: backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend
  
  template:
    metadata:
      labels:
        app: backend
    
    spec:
      containers:
        - name: backend
          #image: backend-api:v1
          #imagePullPolicy: Never
          image: ghcr.io/kevigote/backend-api:latest
          imagePullPolicy: Always
          
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
