k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      # Credential for pulling images from GitHub Container Registry
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          #image: frontend-app:v1
          #imagePullPolicy: Never
          image: ghcr.io/kevigote/frontend-app:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
