k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  labels:
    app: backend

spec:
  selector:
    app: backend

  ports:
    - port: 3000
      targetPort: 3000
  
  type: ClusterIP
