k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  labels:
    app: frontend
spec:
  rules:
    # Domain name
    - host: myapp.local
      http:
        paths:
          # Url path
          - path: /
            # Match all paths that start with "/"
            pathType: Prefix
            backend:
              service:
                # Kubernetes Service name to forward traffic to 
                name: frontend-service
                port:
                  number: 80
